# bot-at

./: .gitignore  pyproject.toml
src/: main.py
src/bot/: commands.py  handlers.py
src/db/: bot_db.py  connection.py  create_user.py  delete_user.py  queries.py  update_user.py
src/services/: auth.py  cadastro.py  consumo.py  coordenadas.py  equipamentos.py  log.py
src/utils/: formatter.py  image.py
tests/: test_db.py  test_equipamentos.py
